# tome-tracker

./: .pre-commit-config.yaml  README.md  pyproject.toml
db/: init_db.sql  init_test_db.sql
src/tome_tracker/: api_utils.py  barcode_scanner.py  db_utils.py  user_interface.py
test/: test_api_utils.py  test_barcode_scanner.py  test_db_utils.py
