[project]
name = "tome-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "psycopg[binary]>=3.2.9",
    "pyzbar>=0.1.9",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint]
# Enable isort rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "I"]
